--- a/portfolio.html
+++ b/portfolio.html
@@ -312,6 +312,27 @@
             </li>
           </ul>
         </div>
+        <div class="ftr-signup">
+          <form class="newsletter-signup">
+            <p class="join">Підпишись на розсилку</p>
+            <div class="signup-data">
+              <input
+                type="email"
+                name="signup-email"
+                class="signup-email"
+                placeholder="E-mail"
+                autocomplete="on"
+                required
+              />
+              <button type="submit" class="signup-button">
+                Підписатися
+                <svg class="icon-send" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
